Edited the Dockerfile for gd, managed to squash every last bugs (so far)

--- a/resources/sass/partials/_landing.scss
+++ b/resources/sass/partials/_landing.scss
@@ -2,31 +2,49 @@
     background: linear-gradient(90deg, #fbbf10 0%, #fc9622 100%);
 }
 
-.hero-video {
-    position: absolute;
-    top: 0;
-    right: 0;
-    bottom: 24vh;
-    left: 0;
-    overflow: hidden;
-
-    @media (min-width: 1024px) and (max-width: 1279px) {
-        bottom: 21vh;
-    }
-
-    .video {
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%,-50%);
-        height: auto;
-        min-height: 200%;
-        min-width: 200%;
-        width: auto;
-    }
-}
-
 #accueil {
+    .hero-banner {
+        position: absolute;
+        z-index: 0;
+        top: 0;
+        right: 0;
+        bottom: 25vh;
+        left: 0;
+        overflow: hidden;
+        background-position: center;
+        background-size: cover;
+        background-repeat: no-repeat;
+
+        @media (min-width: 1280px) {
+            bottom: 24vh;
+        }
+    }
+
+    .hero-video {
+        position: absolute;
+        top: 0;
+        right: 0;
+        bottom: 24vh;
+        left: 0;
+        overflow: hidden;
+        z-index: 5;
+
+        @media (min-width: 1024px) and (max-width: 1279px) {
+            bottom: 21vh;
+        }
+
+        .video {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%,-50%);
+            height: auto;
+            min-height: 200%;
+            min-width: 200%;
+            width: auto;
+        }
+    }
+
     .wave {
         bottom: 0.5rem;
 
